@@ -3,6 +3,9 @@
 
 * more documentation improvements
 
+* added a hack to handle Rulog::Functor specially during unification for the
+  moment; this will be handled more cleanly in the released version of rulog
+
 === 0.9 / 2012-01-12
 
 * unific split out from the in-development rulog (Ruby With Logic) gem
